--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <li><strong>Project: Metadata Analyzer</strong></li>
         </ul>
         <ul>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="https://wizardml7.github.io/">Home</a></li>
             <li><a href="#overview">Project Overview</a></li>
             <li><a href="#features">Features</a></li>
             <li><a href="#technologies">Technologies</a></li>
